sonar 语法优化